--- a/app/src/pages/PostsPage/PostsListItem.css
+++ b/app/src/pages/PostsPage/PostsListItem.css
@@ -61,7 +61,6 @@
     align-items: center;
     position: absolute;
     left: 10px;
-    right: 10px;
     top: 5px;
 }
 
@@ -78,6 +77,9 @@
     visibility: hidden;
     margin-left: auto;
     align-items: center;
+    position: absolute;
+    right: 10px;
+    top: 5px;
 }
 
 .r-posts-list-item .actions button:focus {
